fix annotation height and hidden overflow content

--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -586,6 +586,8 @@ main .h1  p{
     line-height: 16px;
     color: #475767;
     margin: 3px 0;
+	height: 80px;
+	overflow: hidden;
 }
 
 .publication > .item .link{
